[package]
name = "shiba_reborn"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev", "mongodb"]
dev = []
prod = []
mysql = ["dep:mysql"]
mongodb = ["dep:mongodb"]
surrealdb = ["dep:surrealdb"]

[dependencies]
sysinfo = "0.30.11"
rand = { version = "0.8.5", features = ["small_rng"] }
base64 = "0.22.0"
rayon = "1.10.0"
chrono = "0.4.38"
termcolor = "1.4.1"

lazy_static = "1.4.0"
once_cell = "1.19.0"

tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12.4", features = ["json"] }
webhook = "2.1.2"
poise = "0.6.1"

serde = "1.0.199"
serde_json = "1.0.116"

mysql = { version = "25.0.0", optional = true }
mongodb = { version = "2.8.2", features = ["tokio-sync"], optional = true }
surrealdb = { version = "1.4.2", optional = true }

log = "0.4.21"
env_logger = "0.11.3"
env_filter = "0.1.0"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
module_inception = "allow"
